todays frontend all combined

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -226,18 +226,12 @@ footer{
 
   <div>
   <i class="fa fa-envelope"></i>
-  <p><a href="mailto:support@company.com">contact@demo.com</a></p>
+  <p><a href="mailto:support@company.com">contact@pecunia.com</a></p>
   </div>
 
-  </div>
+  
 
-  <div class="footer-right">
-
-  <p class="footer-company-about">
-  <span>About the company</span>
-DEmo is a demo website for bootstrap &amp; SEO Learner.
-  </p>
-
+  
   <div class="footer-icons">
 
   <a href="#"><i class="fa fa-facebook"></i></a>
