--- a/src/app/components/nucleoicons/nucleoicons.component.html
+++ b/src/app/components/nucleoicons/nucleoicons.component.html
@@ -26,6 +26,9 @@
               <div class="find-widget">
                 Phone:  <p>800-500</p>
               </div>
+              <div class="find-widget">
+                Email:  <p>contact@pecunia.com</p>
+              </div>
               
               <div class="find-widget">
                 <p>  Working hours: Mon to Sat: 09:30 AM - 10.30 PM</p>
