--- a/src/app/examples/gold-loan/gold-loan.component.html
+++ b/src/app/examples/gold-loan/gold-loan.component.html
@@ -1,18 +1,55 @@
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+  <img src="assets/img/bankimm.jpeg" class="img-fluid" >
+  <div class="navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+       <li class="nav-item" >
+       <a routerLink = "/home"button type="button" class="btn btn-danger">Home</a>
+       <li class="nav-item" >
+      <a routerLink = "/user-profile"button type="button" class="btn btn-danger">Go back to user-profile</a>
+      </li>
+      </ul></div>
+      </nav>
 <br><br>
 <br><br>
 <br><br>
 <br><br>
+
 <h1>LOAN DETAILS</h1>
-<table>
-  <tr *ngFor="let loan of userData.userloan">
-    <td>
-     {{loan.amount}}
-    </td>
-    <td>
-      {{loan.occupation}}
-    </td>
-    <td>
-      {{userData.email}}
-    </td>
-  </tr>
-</table>
+<head>
+  <title>LOAN DETAILS</title> 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+            
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Amount</th>
+        <th>Occupation</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let loan of userData.userloan">
+        <td>
+         {{loan.amount}}
+        </td>
+        <td>
+          {{loan.occupation}}
+        </td>
+        <td>
+          {{userData.email}}
+        </td>
+      </tr>
+     
+    </tbody>
+  </table>
+</div>
+
+</body>
