--- a/src/app/examples/profile/profile.component.html
+++ b/src/app/examples/profile/profile.component.html
@@ -16,7 +16,7 @@
     <br><br><br>
     <div class="row row-cols-1 row-cols-md-2 g-4" style="background-image: url('assets/img/mone2.jpg')" >
         <div class="col" >
-          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin: 0 auto; 
+          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin-top: 300px; 
           float: none; 
           margin-bottom: 10px;margin-left: 311px; ">
             <img src="assets\img\car.jpg" class="card-img-top" style="height: auto;"alt="...">
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6"style="margin-top: 300px">
             <img src="assets\img\ploan.jpg" class="card-img-top"style="height: auto;" alt="...">
             <div class="card-body">
               <h5 class="card-title" style="font-weight: 500;">Personal Loan</h5>
