--- a/src/app/examples/profile/profile.component.html
+++ b/src/app/examples/profile/profile.component.html
@@ -1,67 +1,59 @@
 <nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
-    <img src="assets/img/bankimm.jpeg" class="img-fluid" >
-    <div class="navbar-collapse">
-          <ul class="navbar-nav ml-auto">
-         <li class="nav-item" >
-         <a routerLink = "/home"button type="button" class="btn btn-danger">Logout</a>
-         <li class="nav-item" >
-        <a routerLink = "#"button type="button" class="btn btn-danger">My account</a>
-        </li>
-        </ul>
-    </div> 
-    </nav> 
-    <div class="page-header" data-parallax="true" style="background-image: url('./assets/img/about.jpg');">
-    <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-            
-    <br><br><br>
-    <div class="row row-cols-1 row-cols-md-2 g-4" style="background-image: url('assets/img/mone2.jpg')" >
-        <div class="col" >
-          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin-top: 300px; 
-          float: none; 
-          margin-bottom: 10px;margin-left: 311px; ">
-            <img src="assets\img\car.jpg" class="card-img-top" style="height: auto;"alt="...">
-            <div class="card-body">
-              <h5 class="card-title" style="font-weight: 500;" >Car Loan</h5>
-              <p class="card-text">Dreaming of owning a car? Our Car Loan aims to ensures that you drive around the city in your own vehicle! Avail a car loan, or opt for a pre-approved car loan, and get the best interest rates. Pecunia Bank’s New Car Loan offers car loans from Rs. 1 Lakh upto 100% on-road price along with benefits.</p>
-            </div>
-            <a routerLink = "/vehicleloan" button type="button" class="btn btn-info" style="background-color: #ca1f7b;border-color: #ca1f7b;">Apply now</a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6"style="margin-top: 300px">
-            <img src="assets\img\ploan.jpg" class="card-img-top"style="height: auto;" alt="...">
-            <div class="card-body">
-              <h5 class="card-title" style="font-weight: 500;">Personal Loan</h5>
-              <p class="card-text"> Personal Loans can be used for plenty of purposes! They can be availed when you are planning a vacation, renovating your home or arranging a dream wedding for yourself or somebody special in the family.  You can get a Personal Loan from Rs. 50,000 upto Rs. 15,00,000 with minimal documentation and speedy approval</p>
-            </div>
-            <a routerLink = "/personalloan" button type="button" class="btn btn-info" style="background-color: #ca1f7b;border-color: #ca1f7b;">Apply now</a>
-          </div>
-        </div>
-        
-        <div class="col">
-          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin: 0 auto; 
-          float: none; 
-          margin-bottom: 10px; margin-left: 311px;">
-            <img src="assets\img\gold.jpg" class="card-img-top" style="height: auto;"alt="...">
-            <div class="card-body">
-              <h5 class="card-title" style="font-weight: 500;">Gold Loan</h5>
-              <p class="card-text">Have an urgent need for cash , Now you can use your gold to avail a Gold Loan starting from Rs. 25,001 upto Rs. 25,00,000. Pecunia Bank Gold Loans provide loan against gold with same day loan disbursement.</p>
-            </div>
-            <a routerLink = "/myaccount" button type="button" class="btn btn-info" style="background-color: #ca1f7b;border-color: #ca1f7b;">Apply now</a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
-            <img src="assets\img\h1.jpg" class="card-img-top" style="height: auto;" alt="...">
-            <div class="card-body">
-              <h5 class="card-title" style="font-weight: 500;">Home Loan</h5>
-              <p class="card-text">Our affordable and flexible home loans are designed to take you closer to your dream home.We also provide you with legal and technical counselling to help you make the right home buying decision. </p>
-            </div>
-            <a routerLink = "/homeloan" button type="button" class="btn btn-info" style="background-color: #ca1f7b;border-color: #ca1f7b;">Apply now</a>
-          </div>
-        </div>
-      </div>
+  <img src="assets/img/foot.png" class="img-fluid" >
+  <div class="navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item" >
+            <a routerLink = "/myloans"button type="button" class="btn btn-danger">My loans</a>
+          </li>
+       <li class="nav-item" >
+      <a routerLink = "#"button type="button" class="btn btn-danger">My account</a>
+    </li>
+      <li class="nav-item" >
+        <a routerLink = "/home"button type="button" class="btn btn-danger">Logout</a>
+      </li>
+      </ul>
+  </div> 
+  </nav> 
+  <div class="page-header" data-parallax="true" style="background-image: url('./assets/img/about.jpg');">
+  <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
+
+  <div class="card" style="width: 20rem;margin: 25px;">
+    <img class="card-img-top" src="assets\img\car.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Car Loan</h4>
+      <p class="card-text">Dreaming of owning a car? Our Car Loan aims to ensures that you drive around the city in your own vehicle! Avail a car loan, or opt for a pre-approved car loan, and get the best interest rates.</p>
+      <a routerLink = "/personalloan" class="btn btn-primary bu t">Apply now</a>
+    </div>
     
+  </div>
+  
+  <div class="card" style="width: 20rem;margin: 25px;">
+    <img class="card-img-top" src="assets\img\ploan.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Personal Loan</h4>
+      <p class="card-text">Personal Loans can be used for plenty of purposes! They can be availed when you are planning a vacation, renovating your home or arranging a dream wedding in your family.</p>
+      <a routerLink = "/personalloan"class="btn btn-primary">Apply now</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 20rem;margin: 25px;">
+    <img class="card-img-top" src="assets\img\gold.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Gold Loan</h4>
+      <p class="card-text">Have an urgent need for cash , Now you can use your gold to avail a Gold Loan starting from Rs. 25,001 upto Rs. 25,00,000. Pecunia Bank Gold Loans provide loan against gold with same day loan disbursement.</p>
+      <a routerLink = "/personalloan" class="btn btn-primary">Apply now</a>
+    </div>
+  </div>
+  <div class="card" style="width: 20rem;margin: 25px;">
+    <img class="card-img-top" src="assets\img\h1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Home Loan</h4>
+      <p class="card-text">Our affordable and flexible home loans are designed to take you closer to your dream home.We also provide you with legal and technical counselling to help you make the right home buying decision. </p>
+      <a routerLink = "/personalloan" class="btn btn-primary">Apply now</a>
+    </div>
+  </div>
+
 </div>
-    
-    
+
+
+
