--- a/src/app/examples/personal-loan/personal-loan.component.html
+++ b/src/app/examples/personal-loan/personal-loan.component.html
@@ -1,3 +1,14 @@
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+  <img src="assets/img/bankimm.jpeg" class="img-fluid" >
+  <div class="navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+       <li class="nav-item" >
+       <a routerLink = "/home"button type="button" class="btn btn-danger">Home</a>
+       <li class="nav-item" >
+      <a routerLink = "/user-profile"button type="button" class="btn btn-danger">Go back to user-profile</a>
+      </li>
+      </ul></div>
+      </nav>
 <div  class="regform border border-primary">
   <div class="container">
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal">
