--- a/src/app/examples/gold-loan/gold-loan.component.html
+++ b/src/app/examples/gold-loan/gold-loan.component.html
@@ -27,7 +27,7 @@
     <tbody>
       <tr *ngFor="let loan of userData.userloan">
         <td>
-          {{loan.occupation}}
+          {{loan.loantype}}
         </td>
         <td>
           {{loan.amount}}
