--- a/src/app/examples/personal-loan/personal-loan.component.html
+++ b/src/app/examples/personal-loan/personal-loan.component.html
@@ -71,9 +71,9 @@
       </div>
 
       <div class="form-group">
-        <label class="control-label" >Type of loan: <span class="text-danger"*ngIf="form.get('typeOfLoan').hasError('required')">*</span></label>
+        <label class="control-label" >Type of loan: <span class="text-danger"*ngIf="form.get('loantype').hasError('required')">*</span></label>
          <div class="col=md-10 regInput" >
-        <select class="form-control" id="typeOfLoan" formControlName="typeOfLoan" aria-placeholder="select" required >
+        <select class="form-control" id="loantype" formControlName="loantype" aria-placeholder="select" required >
   
           <option value="" selected>Select</option> 
      <option value='Personal Loan'>Personal loan</option>
@@ -112,14 +112,6 @@
                  </div>  
      
               </div>
-              <div class="form-group">
-                <label for="" class="control-label">Account number:</label>
-                <span class="text-danger"*ngIf="form.get('accountNumber').hasError('required')">*</span>
-                 <div class="col=md-10 regInput" >
-                <input type="text" class="form-control" id="accountNumber" placeholder="Enter your account number" formControlName="accountNumber" disabled> 
-                </div>
-                
-              </div> 
 
         <div class="form-group">
           <label for="" class="control-label">Aadhar UID number:</label>
@@ -151,7 +143,7 @@
           <div class="form-check-label">
             <input class="form-check-input" type="checkbox" id="gridCheck" formControlName=checkBox required style="margin-left: 12px;">
             <label class="form-check-label" for="gridCheck" style="margin-left: 36px;">
-              I  agreee with terms and Conditions
+              I  agree with terms and Conditions
             </label>
           </div>
         </div>
